--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>fr.paris.lutece.plugins</groupId>
 	<artifactId>plugin-archive</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<name>archive</name>
+	<name>Lutece archive plugin</name>
 	<description>archive plugin</description>
 	<packaging>lutece-plugin</packaging>
 
