--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.paris.lutece.plugins</groupId>
 	<artifactId>plugin-archive</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.1</version>
 	<name>Lutece archive plugin</name>
 	<description>archive plugin</description>
 	<packaging>lutece-plugin</packaging>
@@ -47,8 +47,8 @@
 	</properties>
 
 	 <scm>
-        <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-archive</connection>
-        <developerConnection>scm:svn:https://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-archive</developerConnection>
-        <url>http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-archive</url>
+        <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/tags/plugin-archive-1.0.1</connection>
+        <developerConnection>scm:svn:https://dev.lutece.paris.fr/svn/lutece/portal/tags/plugin-archive-1.0.1</developerConnection>
+        <url>http://dev.lutece.paris.fr/svn/lutece/portal/tags/plugin-archive-1.0.1</url>
     </scm>
 </project>
