--- a/src/java/fr/paris/lutece/plugins/archive/ressources/archive_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/archive/ressources/archive_messages.properties
@@ -5,5 +5,6 @@
 # Plugin infos
 plugin.description=Archive
 plugin.provider=city of paris
-daemon.archiveIndexer.name=Archive
+daemon.archiveIndexer.name=Indexer Archive
+daemon.archiveIndexer.description=Indexer Archive
 archive.message.error_during_download_file=Error During download File
