ARCHIVE-4 : Error in the package name "resources"
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-archive@36737 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/archive/resources/archive_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/archive/resources/archive_messages.properties
@@ -4,7 +4,13 @@
 ################################################################################
 # Plugin infos
 plugin.description=Archive
-plugin.provider=city of paris
+plugin.provider=City of Paris
+
+################################################################################
+# Daemon
 daemon.archiveIndexer.name=Indexer Archive
 daemon.archiveIndexer.description=Indexer Archive
-archive.message.error_during_download_file=Error During download File
+
+################################################################################
+# Messages
+message.error_during_download_file=Error when downloading the file : The file may have been deleted.
