--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 			<version>[3.0.2-SNAPSHOT,4.0.0-SNAPSHOT)</version>
 			<type>lutece-core</type>
 		</dependency>
+		<dependency>
+			<groupId>fr.paris.lutece.plugins</groupId>
+			<artifactId>library-archive</artifactId>
+			<version>[1.0.0-SNAPSHOT,)</version>
+		</dependency>
 
 	</dependencies>
 	<properties>
