ARCHIVE-6 : Update pom

--- a/pom.xml
+++ b/pom.xml
@@ -1,59 +1,54 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<parent>
-		<artifactId>lutece-plugins-pom</artifactId>
-		<groupId>fr.paris.lutece.plugins</groupId>
-		<version>3.7</version>
-	</parent>
-
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>fr.paris.lutece.plugins</groupId>
-	<artifactId>plugin-archive</artifactId>
-	<version>1.0.6-SNAPSHOT</version>
-	<name>Lutece archive plugin</name>
-	<description>archive plugin</description>
-	<packaging>lutece-plugin</packaging>
-
-	<repositories>
-		<repository>
-			<id>luteceSnapshot</id>
-			<name>luteceSnapshot</name>
-			<url>http://dev.lutece.paris.fr/snapshot_repository</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>lutece</id>
-			<name>luteceRepository</name>
-			<url>http://dev.lutece.paris.fr/maven_repository</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-
-	<dependencies>
-		<dependency>
-			<groupId>fr.paris.lutece</groupId>
-			<artifactId>lutece-core</artifactId>
-			<version>[3.0.2-SNAPSHOT,)</version>
-			<type>lutece-core</type>
-		</dependency>
-		<dependency>
-			<groupId>fr.paris.lutece.plugins</groupId>
-			<artifactId>library-archive</artifactId>
-			<version>[1.0.0-SNAPSHOT,)</version>
-		</dependency>
-
-	</dependencies>
-	<properties>
-		<jiraProjectName>ARCHIVE</jiraProjectName>
-		<jiraComponentId>10571</jiraComponentId>
-	</properties>
-
-	 <scm>
-        <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-archive</connection>
-        <developerConnection>scm:svn:https://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-archive</developerConnection>
-        <url>http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-archive</url>
+    <parent>
+        <artifactId>lutece-global-pom</artifactId>
+        <groupId>fr.paris.lutece.tools</groupId>
+        <version>3.0.12</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>fr.paris.lutece.plugins</groupId>
+    <artifactId>plugin-archive</artifactId>
+    <version>1.0.6-SNAPSHOT</version>
+    <name>Lutece archive plugin</name>
+    <description>archive plugin</description>
+    <packaging>lutece-plugin</packaging>
+    <repositories>
+        <repository>
+            <id>luteceSnapshot</id>
+            <name>luteceSnapshot</name>
+            <url>http://dev.lutece.paris.fr/snapshot_repository</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>lutece</id>
+            <name>luteceRepository</name>
+            <url>http://dev.lutece.paris.fr/maven_repository</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+    <dependencies>
+        <dependency>
+            <groupId>fr.paris.lutece</groupId>
+            <artifactId>lutece-core</artifactId>
+            <version>[3.0.2-SNAPSHOT,)</version>
+            <type>lutece-core</type>
+        </dependency>
+        <dependency>
+            <groupId>fr.paris.lutece.plugins</groupId>
+            <artifactId>library-archive</artifactId>
+            <version>[1.0.0-SNAPSHOT,)</version>
+        </dependency>
+    </dependencies>
+    <properties>
+        <jiraProjectName>ARCHIVE</jiraProjectName>
+        <jiraComponentId>10571</jiraComponentId>
+    </properties>
+    <scm>
+        <connection>scm:git:https://github.com/lutece-platform/lutece-tech-plugin-archive.git</connection>
+        <developerConnection>scm:git:https://github.com/lutece-platform/lutece-tech-plugin-archive.git</developerConnection>
+        <url>https://github.com/lutece-platform/lutece-tech-plugin-archive.git</url>
     </scm>
 </project>
