LUT-27234 : New translation resources files for citelibre related plugins

--- a/src/java/fr/paris/lutece/plugins/archive/resources/archive_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/archive/resources/archive_messages.properties
@@ -8,9 +8,9 @@ plugin.provider=City of Paris
 
 ################################################################################
 # Daemon
-daemon.archiveIndexer.name=Indexer Archive
-daemon.archiveIndexer.description=Indexer Archive
+daemon.archiveIndexer.name=Archive Indexer
+daemon.archiveIndexer.description=Archive Indexer
 
 ################################################################################
 # Messages
-message.error_during_download_file=Error when downloading the file : The file may have been deleted.
+message.error_during_download_file=An error occurred during the file download: it is possible that the file has been deleted.
