--- a/pom.xml
+++ b/pom.xml
@@ -33,13 +33,13 @@
         <dependency>
             <groupId>fr.paris.lutece</groupId>
             <artifactId>lutece-core</artifactId>
-            <version>[3.0.2-SNAPSHOT,)</version>
+            <version>[3.0.2-SNAPSHOT,7.9.9)</version>
             <type>lutece-core</type>
         </dependency>
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>library-archive</artifactId>
-            <version>[1.0.0-SNAPSHOT,)</version>
+            <version>[1.0.0-SNAPSHOT,1.9.9)</version>
         </dependency>
     </dependencies>
     <properties>
