--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>plugin-archive</artifactId>
-    <version>1.0.6-SNAPSHOT</version>
+    <version>1.0.6</version>
     <name>Lutece archive plugin</name>
     <description>archive plugin</description>
     <packaging>lutece-plugin</packaging>
@@ -50,5 +50,6 @@
         <connection>scm:git:https://github.com/lutece-platform/lutece-tech-plugin-archive.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-platform/lutece-tech-plugin-archive.git</developerConnection>
         <url>https://github.com/lutece-platform/lutece-tech-plugin-archive.git</url>
-    </scm>
+      <tag>plugin-archive-1.0.6</tag>
+  </scm>
 </project>
